ADD mission completed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <input type = "textbox" id = "search" class = "search-bar"/>
                             </div>
                             <div class = "flex-element-portfoilo">
-                                    <div class = "name-card"></div>
+                                    <div class = "name-card"><img src = "./assets/icon.jpg" class = "image-icon"/></div>
                                     <div>
                                             <p class = "hithere-para">Hi there,</p>
                                             <h1 class = "name-heading">Shanmugavel RM (@VelMaster)</h1>
@@ -42,7 +42,7 @@
                         <div class = "flex-elemnt-upper-bottom">
                             <div class = "flex-element-portfoilo">
                                 <img src = "./assets/bell-icon.png" class = "bell-icon"/>
-                                <div class = "account-icon"></div>
+                                <div class = "account-icon"><img src = "./assets/icon.jpg" class = "image-account-icon"/></div>
                                 <h3 class = "account-name">Shanmugavel RM</h3>
 
                             </div>
@@ -114,10 +114,36 @@
                         <div>
                             <h2 class = "announcement-heading">Announcements</h2>
                             <div class = "announcement-card">
+                                <div>
+                                    <h3 class = "announcement-sub-heading">Site Maintenance</h3>
+                                    <p class = "announcement-sub-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore manga aliqua.</p>
+                                </div>
+                                <hr class = "line"/>
+                                <div>
+                                    <h3 class = "announcement-sub-heading">Community Share Day</h3>
+                                    <p class = "announcement-sub-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore manga aliqua.</p>
+                                </div>
+                                <hr class = "line"/>
+                                <div>
+                                    <h3 class = "announcement-sub-heading">Updated Privacy Policy</h3>
+                                    <p class = "announcement-sub-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore manga aliqua.</p>
+                                </div>
 
                             </div>
                             <h2 class = "people-heading">People</h2>
                             <div class = "people-card">
+                                <div class = "flex-row">
+                                    <div class = "people-icon"><img src = "./assets/anand-icon.jpg" class = "image-account-icon"/></div>
+                                    <p class = "people-name">@Anand</p>
+                                </div>
+                                <div class = "flex-row">
+                                    <div class = "people-icon"><img src = "./assets/surrey-icon.jpg" class = "image-account-icon"/></div>
+                                    <p class = "people-name">@Surreyyy</p>
+                                </div>
+                                <div class = "flex-row">
+                                    <div class = "people-icon"><img src = "./assets/t-icon.png" class = "image-account-icon"/></div>
+                                    <p class = "people-name">@Ghiri</p>
+                                </div>
 
                             </div>
                         </div>
